# sqlalchemy_to_pydantic

./: Makefile  README.md  pyproject.toml
app/: main.py  models.py  schemas.py
